--- a/mystyle.css
+++ b/mystyle.css
@@ -2,6 +2,7 @@ header {
   background: url(voeten.jpg);
   background-size: cover;
   background-position: center;
+  font-size: 18px;
   }
 
 .nav-wrapper {
@@ -10,13 +11,6 @@ header {
 
 }
 
-.card{
-margin-left: 10px;
-padding-top: 20px;
-height:500px;
-margin-top: 50px;
-
-}
 .card p {
 text-align: center;
 font-size: 24px;
@@ -38,7 +32,12 @@ background-position: left;
 }
 
 #sneaker {
-height: 250px;
-width: 350px;
-position
+height: 200px;
+width: 300px;
+
+}
+
+#uitleg{
+font-size: 12px;
+
 }
